# Math-Lib

./: CMakeLists.txt  README.md  main.cpp
headers/: matrix.hpp  vector.hpp
sources/: matrix.hpp  vector.hpp
test/: matrix_test.cpp  vector_test.cpp
